feat: update inventory management system - latest changes